<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content">

        <View
            android:layout_width="50dp"
            android:layout_height="50dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_R"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <SeekBar
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/color_bar_R"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:progress="0"
            android:max="255"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_G"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <SeekBar
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/color_bar_G"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:progress="0"
            android:max="255" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_B"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <SeekBar
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/color_bar_B"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:progress="0"
            android:max="255" />
    </LinearLayout>


</LinearLayout>