<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myfirstapp.TimeTableActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/monday"
                style="@style/week_name"/>
            <TextView
                android:text="@string/tuesday"
                style="@style/week_name"/>
            <TextView
                android:text="@string/wednesday"
                style="@style/week_name"/>
            <TextView
                android:text="@string/thursday"
                style="@style/week_name"/>
            <TextView
                android:text="@string/friday"
                style="@style/week_name"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/mon_1"
                style="@style/table_button"/>
            <Button
                android:id="@+id/tue_1"
                style="@style/table_button"/>
            <Button
                android:id="@+id/wed_1"
                style="@style/table_button"/>
            <Button
                android:id="@+id/thu_1"
                style="@style/table_button"/>
            <Button
                android:id="@+id/fri_1"
                style="@style/table_button"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/mon_2"
                style="@style/table_button"/>
            <Button
                android:id="@+id/tue_2"
                style="@style/table_button"/>
            <Button
                android:id="@+id/wed_2"
                style="@style/table_button"/>
            <Button
                android:id="@+id/thu_2"
                style="@style/table_button"/>
            <Button
                android:id="@+id/fri_2"
                style="@style/table_button"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/mon_3"
                style="@style/table_button"/>
            <Button
                android:id="@+id/tue_3"
                style="@style/table_button"/>
            <Button
                android:id="@+id/wed_3"
                style="@style/table_button"/>
            <Button
                android:id="@+id/thu_3"
                style="@style/table_button"/>
            <Button
                android:id="@+id/fri_3"
                style="@style/table_button"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/mon_4"
                style="@style/table_button"/>
            <Button
                android:id="@+id/tue_4"
                style="@style/table_button"/>
            <Button
                android:id="@+id/wed_4"
                style="@style/table_button"/>
            <Button
                android:id="@+id/thu_4"
                style="@style/table_button"/>
            <Button
                android:id="@+id/fri_4"
                style="@style/table_button"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/mon_5"
                style="@style/table_button"/>
            <Button
                android:id="@+id/tue_5"
                style="@style/table_button"/>
            <Button
                android:id="@+id/wed_5"
                style="@style/table_button"/>
            <Button
                android:id="@+id/thu_5"
                style="@style/table_button"/>
            <Button
                android:id="@+id/fri_5"
                style="@style/table_button"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/mon_6"
                style="@style/table_button"/>
            <Button
                android:id="@+id/tue_6"
                style="@style/table_button"/>
            <Button
                android:id="@+id/wed_6"
                style="@style/table_button"/>
            <Button
                android:id="@+id/thu_6"
                style="@style/table_button"/>
            <Button
                android:id="@+id/fri_6"
                style="@style/table_button"/>
        </TableRow>

    </TableLayout>

</LinearLayout>
